# aquarelle

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  book.toml  build.rs  config.toml.in  meson.build  meson_options.txt
.reuse/: dep5
aquarelle/: Aquarelle.toml  ableton_live.rhai  ableton_live.toml  adwaita.rhai  adwaita.toml  blackbox.rhai  blackbox.toml  blackbox_and_tilix.rhai  blackbox_and_tilix.toml  chromium.rhai  chromium.toml  css_colors.rhai  css_colors.toml  dark_reader.rhai  dark_reader.toml  ghostwriter.rhai  ghostwriter.toml  gimp_palette.rhai  gimp_palette.toml  jdownloader.rhai  jdownloader.toml  konsole.rhai  konsole.toml  kvantum.rhai  kvantum.toml  lib.rhai  obsidian-border.rhai  obsidian-border.toml  plasma_scheme.rhai  plasma_scheme.toml  qjackctl.rhai  qjackctl.toml  sidebery.rhai  sidebery.toml  syntax_highlighting.rhai  syntax_highlighting.toml  telegram_desktop.rhai  telegram_desktop.toml  wine.rhai  wine.toml  (+2 more)
aquarelle/code/: map.rhai  map.toml  settings.rhai  settings.toml  token.rhai  workbench.rhai
aquarelle/firefox/: gnome_theme.rhai  gnome_theme.toml  map.rhai  map.toml
aquarelle/non_maps/: everforest.toml  gruvbox.toml  neon_cake.toml  solarized.toml
aquarelle/reaper/: color_theme.rhai  colors.rhai  control_panel.rhai  general.rhai  icons.rhai  item.rhai  map.rhai  map.toml  meter.rhai  mixer.rhai  rtconfig.rhai  swell.rhai  toolbar.rhai  track.rhai  transport.rhai
aquarelle/schemes/: neon_cake.rhai  neon_cake.toml
aquarelle/stylus/: map.rhai  map.toml
aquarelle/themes/: everforest.toml  gruvbox.toml  neon_cake.toml  solarized.toml
book/: SUMMARY.md  arrangement.md  introduction.md  namespace.md  paths.md  scheme.md
data/: io.github.ejaa3.Aquarelle.appdata.xml.in.in  io.github.ejaa3.Aquarelle.desktop.in.in  io.github.ejaa3.Aquarelle.gschema.xml.in  meson.build  resources.gresource.xml.in  shortcuts-window.ui  style.css
data/icons/: meson.build
data/icons/app/: io.github.ejaa3.Aquarelle.Devel.svg.license
doc/: README.md  SUMMARY.md  namespaces.md  options.md  themes.md
doc/po/: es.po
po/: LINGUAS  POTFILES  es.po  meson.build
src/: arrangement.rs  cache.rs  config.rs.in  css_filter.rs  lib.rs  main.rs  map.rs  mapping.rs  meson.build  namespace.rs  path.rs  pathing.rs  scheme.rs  script.rs  theme.rs
tests/: errors.rs
