# SPDX-FileCopyrightText: 2024 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = 'aquarelle'
version = '0.1.0'
description = 'Color scheme processor focused on theme maintainability'
authors = ['Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>']
license = 'AGPL-3.0-only'
keywords = ['cli', 'color', 'palette', 'scheme', 'theme']
edition = '2021'
default-run = 'aquarelle'

[dependencies]
async-channel = { version = '2'   , optional = true }
compact_str   = { version = '0.8' , default-features = false, features = ['serde'] }
dirs          = { version = '5'   , default-features = false }
fastrand      = '2'
itertools     = { version = '0.13', default-features = false }
palette       = { version = '0.7' , default-features = false, features = ['std'] }
regex         = '1'
rhai          = { version = '1'   , features = ['only_i32', 'f32_float', 'no_custom_syntax', 'serde'] }
smallvec      = { version = '1'   , default-features = false }
smartstring   = { version = '1'   , default-features = false }
zip           = { version = '2'   , default-features = false }

serde = { version = '1'  , features = ['derive', 'rc'] }
toml  = '0.8'

png   = '0.17'
resvg = '0.43'

# CLI:
clap     = { version = '4'  , optional = true, features = ['derive'] }
exitcode = { version = '1'  , optional = true }
time     = { version = '0.3', optional = true, default-features = false, features = ['formatting', 'macros'] }

[dependencies.gtk]
default-features = false
features = ['gnome_44']
optional = true
package = 'gtk4'
version = '0.9'

# [dependencies.sourceview]
# default-features = false
# optional = true
# package = 'sourceview5'
# version = '0.7'

[dependencies.adw]
package = 'libadwaita'
version = '0.7'
default-features = false
features = ['v1_4']
optional = true

[dependencies.gettext-rs]
version = '0.7'
default-features = false
features = ['gettext-system']
optional = true

[dependencies.declarative]
version = '0.7'
optional = true

[build-dependencies]
glib-build-tools = { version = '0', optional = true }

[features]
cli = ['clap', 'exitcode', 'time']
gui = ['async-channel', 'adw', 'declarative', 'gettext-rs', 'glib-build-tools', 'gtk']

[[bin]]
name = 'aquarelle'
required-features = ['cli']

[[bin]]
name = 'gui'
required-features = ['gui']
