# SPDX-FileCopyrightText: 2024 Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = 'aquarelle'
version = '0.1.0'
description = 'Color scheme processor'
authors = ['Eduardo Javier Alvarado Aarón <eduardo.javier.alvarado.aaron@gmail.com>']
license = 'AGPL-3.0-only'
keywords = ['cli', 'color', 'palette', 'scheme', 'theme']
edition = '2021'
default-run = 'aquarelle'

[dependencies]
adw = { package = 'libadwaita', version = '0.7.0', features = ['v1_6'], optional = true }
annotate-snippets = '0.11.4'
async-channel = { version = '2.3.1', optional = true }
clap = { version = '4.5.17', optional = true, features = ['derive'] }
compact_str = { version = '0.8.0', features = ['serde'] }
declarative = { version = '0.7', optional = true }
dirs = '5.0.1'
fastrand = '2.1.1'
gettext-rs = { version = '0.7.1', features = ['gettext-system'], optional = true }
gtk = { package = 'gtk4', version = '0.9.1', features = ['gnome_47'], optional = true }
itertools = '0.13.0'
palette = { version = '0.7.6', default-features = false, features = ['std'] }
png = '0.17.13'
resvg = { version = '0.43.0', default-features = false, features = ['memmap-fonts', 'system-fonts', 'text'] }
rhai = { version = '1.19.0', features = ['only_i32', 'f32_float', 'no_custom_syntax', 'no_time', 'serde'] }
serde = { version = '1.0.210', features = ['derive', 'rc'] }
serde_spanned = '0.6.7'
smartstring = '1.0.1'
toml = { package = 'toml_edit', version = '0.22.21', features = ['serde'] }
vte = { package = 'vte4', version = '0.8.0', features = ['v0_78'], optional = true }
zip = { version = '2.2.0', default-features = false }

[build-dependencies]
glib-build-tools = { version = '0.20.0', optional = true }

[dev-dependencies]
anyhow = '1.0.89'

[features]
cli = ['clap']
gui = ['adw', 'async-channel', 'declarative', 'gettext-rs', 'glib-build-tools', 'gtk', 'vte']

[[bin]]
name = 'aquarelle'
required-features = ['cli']

[[bin]]
name = 'gui'
required-features = ['gui']
